[gd_scene load_steps=8 format=1]

[ext_resource path="res://main/gui.gd" type="Script" id=1]
[ext_resource path="res://gfx/turn_icon.png" type="Texture" id=2]
[ext_resource path="res://gfx/return.png" type="Texture" id=3]
[ext_resource path="res://gfx/menuGrid.png" type="Texture" id=4]
[ext_resource path="res://main/popup.tscn" type="PackedScene" id=5]
[ext_resource path="res://main/levelHolder.gd" type="Script" id=6]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=7]

[node name="Node2D" type="Node2D"]

[node name="gui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="counters" type="Control" parent="gui"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 48.0
margin/bottom = 45.0

[node name="aspects" type="VBoxContainer" parent="gui/counters"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 148.0
alignment = 0

[node name="gravity" type="HBoxContainer" parent="gui/counters/aspects"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 40.0
alignment = 0

[node name="texture" type="TextureFrame" parent="gui/counters/aspects/gravity"]

rect/min_size = Vector2( 40, 40 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="label" type="Label" parent="gui/counters/aspects/gravity"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 13.0
margin/right = 52.0
margin/bottom = 27.0
text = "1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="topLeftButtons" type="Control" parent="gui"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 796.0
margin/top = 5.0
margin/right = -18.0
margin/bottom = 502.0

[node name="retry" type="TextureButton" parent="gui/topLeftButtons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 37.0
margin/top = 0.0
margin/right = 118.0
margin/bottom = 75.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.75, 0.75 )
params/stretch_mode = 0

[node name="menu" type="TextureButton" parent="gui/topLeftButtons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 111.0
margin/top = 0.0
margin/right = 186.0
margin/bottom = 75.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.75, 0.75 )
params/stretch_mode = 0

[node name="popup" parent="gui" instance=ExtResource( 5 )]

visibility/visible = false

[node name="timer" type="Timer" parent="gui"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="levelHolder" type="Node2D" parent="."]

script/script = ExtResource( 6 )

[node name="playerHolder" type="Node2D" parent="."]

[node name="player" parent="playerHolder" instance=ExtResource( 7 )]

transform/pos = Vector2( 169, 128 )


